Fixed z-index in header in catalog instasearch

--- a/app/design/frontend/Aventi/AventiTheme/web/css/source/aventi/_header.less
+++ b/app/design/frontend/Aventi/AventiTheme/web/css/source/aventi/_header.less
@@ -572,6 +572,10 @@
         width: 100%;
     }
 
+    #html-body.instantsearch-result-index header.page-header {
+        z-index: 9;
+    }
+
     .nav-before-open #html-body header.page-header {
         .middle-header {
             box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.15);
